# t2g

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  DOTENV_SETUP.md  LICENSE  OPTIMIZATIONS.md  PROJECT_SUMMARY.md  PROMPTS.md  QUICKSTART.md  README.md  REASONING_NOTES.md  UV_SETUP.md  launch.bat  pyproject.toml  requirements.txt  run.bat  run.sh  test_shared_and_generators.py  test_system.py  test_vn_generator.py  web_server.py
.agent/skills/quiz-generator/: SKILL.md
.agent/skills/quiz-generator/references/: quiz_analysis.txt
docs/: camel_xiangzi.html
examples/: fantasy.txt  mystery.txt  philosophy.txt  sample_text.txt  scifi.txt
examples/demo/: index.html  mengzi_three_chapters.html
godot_project/: project.godot
godot_project/prompts/: analyze.txt  recommend.txt
godot_project/scenes/: main.tscn
godot_project/scripts/: config_loader.gd  game_generator.gd  llm_client.gd  main.gd  text_analyzer.gd
pi_mode/: README.md  __init__.py  analyze.py  compile_twee.py  generate.py  optimize.py  shared.py
pi_mode/generators/: PHILOSOPHY_README.md  __init__.py  base.py  philosophy.py  quiz.py  twine.py  visual_novel.py
prompts/: README.md  analyze.txt  branch_planning.txt  merge.txt  optimize.txt  outline.txt  philosophy_analysis.txt  philosophy_chapters.txt  quiz_questions.txt  recommend.txt  twine_branches.txt  vn_branches.txt
web/: index.html
